@@ -1,3 +1,11 @@
+2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* doc/GetHINSTANCE.3       correct mentioned header file
+	* win/tkWinInt.h           make TkWinChildProc available in private
+    * generic/tkInt.decls      stub table. [Bug #220600] and [Bug #220690].
+	* generic/tkIntPlatDecls.h (regenerated)
+	* generic/tkStubInit.c     (regenerated)
+
 2009-11-25  Stuart Cassoff <stwo@users.sf.net>
 
 	* unix/tcl.m4:		[Patch 2892871]: Remove unneeded
